# digit-recognizer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: submission.csv
src/: cn_net.py  cnn_net.py  digit_recognizer.py  predict_kaggle.py  read_s3.py
src/config/: key.csv
src/model/: mnist_cnn
