[tool.poetry]
name = "digit-recognizer"
version = "0.1.0"
description = ""
authors = ["josemota1 <zemariamota@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
torch = "^1.4.0"
numpy = "^1.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
